# metrics-tp1-so1

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  grafana_server.sh  prometheus_restart.sh
.github/actions/building/: action.yml
.github/actions/documentation/: action.yml
include/: cjson_handler.h  cjson_handler_tp1.h  expose_metrics.h  metrics.h
lib/: libmicrohttpd_a  libpromhttp
memory_main/: CMakeLists.txt
memory_main/include/: functions.h
memory_main/src/: functions.c  main.c
src/: cjson_handler.c  cjson_handler_tp1.c  expose_metrics.c  main.c  metrics.c
